--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -102,4 +102,40 @@
 .date{
     position: absolute;
     top:50px;
+    z-index: 9;
+}
+
+.options{
+    position:absolute;
+    top:48px;
+    background-color: #fff;
+    color:grey;
+    border-radius: 5px;
+    box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
+    -webkit-box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
+    -moz-box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
+}
+
+.optionsItem{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+    color: black;
+}
+
+.optionCounter{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-size: 12px;
+}
+
+.optionCounterBtn{
+    width:30px;
+    height: 30px;
+    cursor: pointer;
+    border: 1px solid black ;
+    color: rgb(0, 0, 0);
+    background-color: gainsboro;
 }
