--- a/src/components/propertylist/propertyList.css
+++ b/src/components/propertylist/propertyList.css
@@ -1,6 +1,6 @@
 .propertlist{
     width: 100%;
-    max-width: 1024px;
+    max-width: 1280px;
     display: flex;
     justify-content: space-between;
     gap: 20px;
@@ -18,17 +18,22 @@
     width: 100%;
     height: 150px;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .propertTitles{
-    background-color: #d3cdcd;
+    padding: 2px 5px;
 }
 
 .propertTitles>h1{
     font-size: 18px;
+    margin: 0;
+    margin-left: 3px;
 }
 
 .propertTitles>h2{
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 400;
+    margin: 0;
+    margin-left: 3px;
 }
