--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -1,12 +1,13 @@
 .containerHome{
-    margin-top:30px;
+    margin-top:40px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    overflow: hidden;
 }
 
-.homeTitle{
-    width: 1024px;
+.homeTitle, .reviewTitle{
+    width: 1280px;
     font-size: 20px;
+    margin: 50px 0%;
 }
