--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -1,6 +1,6 @@
 .mailContainer{
     width: 100%;
-    /* max-width: 1280px;  */
+    max-width: 1280px; 
     margin-top: 50px;
     background-color: #003580;
     color: white;
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 50px;
+    padding: 50px 0;
     overflow: hidden;
 }
 
