--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,7 +7,7 @@
 
 .navContainer{
    width: 100%;
-   max-width:1280px;
+   max-width:1208px;
    color: white;
    display: flex;
    align-items: center;
@@ -16,6 +16,7 @@
 
 .logo{
     font-weight: 500;
+    cursor: pointer;
 
 }
 
