--- a/src/components/searchItem/searchItem.css
+++ b/src/components/searchItem/searchItem.css
@@ -7,6 +7,7 @@
     gap: 20px;
     margin-bottom: 20px;
     background-color: #fefefe;
+    cursor: pointer;
   }
   
   .siImg {
@@ -100,7 +101,7 @@
   }
   
   .siCheckButton{
-    background-color: rgb(4, 109, 213);
+    background-color: #1AB64F;
     color: white;
     font-weight: bold;
     padding: 10px 5px;
@@ -108,7 +109,4 @@
     cursor: pointer;
     border-radius: 8px;
     height: 40px;
-    &:hover{
-      background-color: rgb(7, 122, 236);
-    }
   }
