--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -15,8 +15,10 @@
 }
 
 .logo{
-    font-weight: 500;
+    font-weight: 600;
     cursor: pointer;
+    color: #d1f4f4;
+    font-size: 20px;
 
 }
 
