--- a/client/src/Pages/Register/register.css
+++ b/client/src/Pages/Register/register.css
@@ -7,6 +7,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .closeButton{
