--- a/client/src/Pages/SignIn/signIn.css
+++ b/client/src/Pages/SignIn/signIn.css
@@ -1,6 +1,6 @@
 .signInContainer{
     background-color: rgb(246, 247, 247);
-    width: 35%;
+    width: 33%;
     height: 80vh;
     position: fixed;
     top: 50%;
@@ -8,7 +8,7 @@
     transform: translate(-50%, -50%);
     border-radius: 12px;
     overflow:hidden;
-    z-index:999999999;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .closeButton{
