--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -117,7 +117,7 @@ height: 100px;
 
 .options{
     position:absolute;
-    top:48px;
+    top:44px;
     background-color: #fff;
     color:grey;
     border-radius: 5px;
@@ -131,8 +131,10 @@ height: 100px;
     width: 200px;
     display: flex;
     justify-content: space-between;
-    margin: 10px;
-    color: black;
+    align-items: center;
+    margin: 15px 20px;
+    color: rgb(45, 37, 37);
+    font-weight: 500;
 }
 
 .optionCounter{
@@ -140,6 +142,10 @@ height: 100px;
     gap: 10px;
     align-items: center;
     font-size: 12px;
+}
+
+.optionText{
+    width: fit-content;
 }
 
 .optionCounterBtn{
@@ -150,3 +156,38 @@ height: 100px;
     color: rgb(0, 0, 0);
     background-color: gainsboro;
 }
+
+.optionHeading{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    margin: 15px 25px;
+    color: rgb(99, 89, 89);
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.optionCounterNum{
+    width: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.addHotelContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 20px;
+    font-weight: 500;
+}
+
+.deleteHotel{
+    color:rgb(139, 127, 127);
+}
+
+.addHotel{
+    color: rgb(52, 40, 40);
+}
+
+
