--- a/client/src/components/searchItem/searchItem.css
+++ b/client/src/components/searchItem/searchItem.css
@@ -7,7 +7,6 @@
     gap: 20px;
     margin-bottom: 20px;
     background-color: #fefefe;
-    cursor: pointer;
   }
   
   .siImg {
@@ -65,12 +64,14 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between
+    justify-content: space-between;
+
   }
   
   .siRating{
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    align-items: center;
   }
   
   .siRating>span{
@@ -101,12 +102,17 @@
   }
   
   .siCheckButton{
-    background-color: #1AB64F;
-    color: white;
+    background-color: #0977c5;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     padding: 10px 5px;
     border: none;
+    font-size: 14px;
     cursor: pointer;
-    border-radius: 8px;
-    height: 40px;
+    border-radius: 2px;
+    width: 170px;
+    height: 7vh;
+    &:hover{
+        background-color: #1173b9; 
+    }
   }
