--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -180,6 +180,7 @@ height: 100px;
     justify-content: space-between;
     margin: 20px 20px;
     font-weight: 500;
+    gap: 10px;
 }
 
 .deleteHotel{
