--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300&display=swap');
+
 *{
-    font-family: Inter,sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
 }
