--- a/client/src/Pages/ProfileDetails/profileDetails.css
+++ b/client/src/Pages/ProfileDetails/profileDetails.css
@@ -3,6 +3,42 @@
 }
 
 .leftContainer, .rightContainer{
-    margin: 50px;
-    background-color: rgb(67, 58, 58);
+    margin: 15px;
+    padding:30px 60px;
+    border-radius: 5px;
+    background-color:#ffff;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+
+.rightContainer{
+    margin-left: 5px;
+}
+
+.leftContainer{
+    margin-right: 5px;
+}
+
+/* .leftContainer>h2, .leftContainer>div{
+    padding-left: 5px;
+} */
+
+.leftContainer>h2, .rightContainer>h2{
+    margin:0;
+    padding:5px 0px;
+}
+
+.user__name{
+    padding:15px 20px 0 20px;
+    margin:0;
+    color:rgb(21, 19, 19);
+}
+
+.name__container{
+    margin: 0 4%;
+    min-height: 100vh;
+}
+
+.back__icon{
+    padding:12px 0 0 15px;
+    cursor: pointer;
 }
