--- a/client/src/components/loader/loader.css
+++ b/client/src/components/loader/loader.css
@@ -3,12 +3,22 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 27%;
-    height: 17vh;
-    background-color: #f2eded;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 32%;
+    height: 20vh;
     border-radius: 5px;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-color:#ffff;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
+
+.centeredContent>p{
+    color:rgb(149, 131, 131);
+}
+
+.centeredContent {
+    text-align: center;
+    margin-top: 20px;
+}
+
