--- a/client/src/Pages/Register/register.css
+++ b/client/src/Pages/Register/register.css
@@ -1,5 +1,5 @@
 .signInContainer{
-    background-color: rgb(246, 247, 247);
+    background-color: #ffffff;
     width: 35%;
     height: fit-content;
     position: fixed;
