--- a/client/src/Pages/Home/home.css
+++ b/client/src/Pages/Home/home.css
@@ -8,7 +8,7 @@
 
 .homeTitle, .reviewTitle{
     width: 1208px;
-    font-size: 20px;
+    font-size: 25px;
     margin: 50px 0%;
 }
 
@@ -16,5 +16,12 @@
     width: 90%;
     margin: 20px 5%;
     padding-top: 30px;
+}
+
+.disable__overlay{
+    /* background: rgba(1, 1, 1, 0.5); */
+    z-index: 9999;
+    pointer-events: none;
+    filter: blur(2px);
 }
 
