--- a/client/src/Pages/SignIn/signIn.css
+++ b/client/src/Pages/SignIn/signIn.css
@@ -1,7 +1,7 @@
 .signInContainer{
-    background-color: rgb(246, 247, 247);
+    /* background-color: rgb(246, 247, 247); */
+    background-color: #ffffff;
     width: 33%;
-    height: 80vh;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -12,17 +12,27 @@
 }
 
 .closeButton{
-    color:#8f8181;
+    color:#7d6969;
     display: inline-block;
     margin:5px;
     cursor: pointer;
+    font-size: 22px;
+    font-weight: 500;
 }
 
 
 .right-container{
-    background-color: #fff;
+    background-color: #ffffff;
     width: 50%;
     height: inherit;
+}
+
+.error__message{
+    margin:0;
+    font-weight: 600;
+    color: rgb(222, 86, 41);
+    font-size: 18px;
+    text-align: center;
 }
 
 
