subscribe through email api

--- a/client/src/Pages/Home/home.css
+++ b/client/src/Pages/Home/home.css
@@ -19,7 +19,7 @@
 }
 
 .disable__overlay{
-    /* background: rgba(1, 1, 1, 0.5); */
+    background: rgba(1, 1, 1, 0.5);
     z-index: 9999;
     pointer-events: none;
     filter: blur(2px);
