--- a/client/src/Pages/ProfileDetails/profileDetails.css
+++ b/client/src/Pages/ProfileDetails/profileDetails.css
@@ -35,6 +35,7 @@
 
 .name__container{
     margin: auto;
+    padding: 0 25px;
     max-width:1280px;
     margin-bottom: 30px;
 }
@@ -133,6 +134,8 @@
 
 .password__cri{
     margin-left: 6px;
+    color: #f52020;
+    font-weight: 500;
 }
 
 .otp_message{
@@ -152,4 +155,17 @@
     margin: 5px;
     text-align: center;
 
+}
+
+.otp__container{
+    margin-left:10px;
+}
+
+.time__counter{
+    color: rgb(22, 166, 22);
+    font-weight: 500;
+}
+
+.timer_ptag{
+    margin: 15px 0px;
 }
