--- a/client/src/Pages/Register/register.css
+++ b/client/src/Pages/Register/register.css
@@ -1,14 +1,20 @@
-.signInContainer{
+.registerContainer{
     background-color: #ffffff;
     width: 35%;
     height: fit-content;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 20px 0;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border: 0.2px solid rgb(65, 61, 61);
 }
+
+.maincon{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .closeButton{
     color:#8f8181;
@@ -16,3 +22,94 @@
     margin:5px;
     cursor: pointer;
 }
+
+
+.middle__container{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.line11{
+    border-bottom: rgb(218, 201, 201) 1px solid;
+    width: 140px;
+}
+
+.OrTag{
+    font-weight: 600;
+    padding: 10px;
+}
+
+.registerContainer2{
+    background-color: #ffffff;
+    height: fit-content;
+    width: 25rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border: 0.2px solid rgb(65, 61, 61);
+}
+
+.signup_messaage{
+    width: 280px;
+    margin: 5px auto;
+}
+
+.signup_messaage>p{
+    color: #4c4949;
+    padding: 5px 0;
+    font-size: 12px;
+}
+
+.login_option{
+    width: 280px;
+    margin: 10px auto;
+    margin-bottom: 20px;
+    padding-left: 5px;
+}
+
+.login_option>p{
+    padding: 30px 0;
+}
+
+.login_Btba{
+    font-weight: 600;
+    cursor: pointer;
+    color: rgb(29, 29, 193);
+}
+
+.google__buttom, .facebook__buttom, .email_acc{
+    background-color: #ffffff;
+    display: flex;
+    padding: 1px 5px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 15px 40px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.50) 0px 1px 3px;
+    cursor: pointer;
+}
+
+.google__buttom>p, .facebook__buttom>p{
+    font-size: 17px;
+
+}
+
+.facebook__buttom>img{
+    margin-left: 20px;
+}
+
+
+
+
+
+
+
+
+
