--- a/client/src/Pages/SignIn/signIn.css
+++ b/client/src/Pages/SignIn/signIn.css
@@ -1,14 +1,19 @@
 .signInContainer{
     /* background-color: rgb(246, 247, 247); */
     background-color: #ffffff;
-    width: 33%;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 35%;
+    height: fit-content;
+    margin:20px 0;
     border-radius: 12px;
-    overflow:hidden;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border: 0.2px solid rgb(65, 61, 61);
+}
+
+.maincon2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .closeButton{
@@ -32,6 +37,18 @@
     font-weight: 600;
     color: rgb(222, 86, 41);
     font-size: 18px;
+    text-align: center;
+}
+
+.login_option2{
+    /* width: 280px; */
+    margin: 10px auto;
+    margin-bottom: 20px;
+    padding-left: 5px;
+}
+
+.login_option2{
+    padding: 10px 0;
     text-align: center;
 }
 
