--- a/client/src/components/LeadingHotel/LeadingHotels.css
+++ b/client/src/components/LeadingHotel/LeadingHotels.css
@@ -14,7 +14,6 @@
 
 .leftConn{
     background-image: url("../../Assets/map2.png");
-    width: 100%;
     height: 70vh;
 }
 
@@ -23,80 +22,52 @@
     right: 45%;
 }
 
-
-.floatImg1{
-    display: inline-block;
-    position:relative;
-    top: 6%;
-    left: 80%;
-    z-index: 99999;
-    bottom: 90%;
-    &:hover{
-     cursor: pointer;
-    }
+.left__Main{
+    width: 100%;
 }
 
-
-
-.floatImg2{
-    position:relative;
-    display: inline-block;
-    top: 35%;
-    left: 62%;
-    z-index: 99999;
-    bottom: 90%;
-    &:hover{
-        cursor: pointer;
-       }
-}
-
-.floatImg3{
-    position:relative;
-    display: inline-block;
-    top: 12%;
-    left: 14%;
-    z-index: 99999;
-    bottom: 90%;
-    &:hover{
-        cursor: pointer;
-       }
-}
-
-.floatImg4{
-    display: inline-block;
-    position:relative;
-    top: 57%;
-    right: 10%;
-    z-index: 99999;
-    bottom: 90%;
-    &:hover{
-        cursor: pointer;
-       }
-}
-.floatImg5{
-    display: inline-block;
-    position:relative;
-    top: 20%;
-    right: 55%;
-    z-index: 99999;
-    bottom: 90%;
-    &:hover{
-        cursor: pointer;
-       }
-}
-
-.floatImg6{
-    display: inline-block;
+.china__con{
+    float: right;
     position: relative;
-    z-index: 99999;
-    left: 68%;
-    top: 42%;
-    &:hover{
-        cursor: pointer;
-       }
+    right: 10px;
+    top: 40px;
 }
 
-.firstItem2{
-    border-left: 1px solid #979797;
+.malaysia__con{
+    float: right;
+    position: relative;
+    top: 60%;
+    left: 117px;
 }
+
+.nepal__con{
+    float: right;
+    position: relative;
+    top: 10px;
+    left: 15px;
+
+}
+
+.indian__con{
+    float: right;
+    position: relative;
+    left: 135px;
+    top: 225px;
+}
+
+.uae__con{
+    float: right;
+    position: relative;
+    bottom: 80px;
+    right: 400px;
+}
+
+.Indonesia__con{
+    float:right;
+    position: relative;
+    top: 180px;
+    left: 30px;
+}
+
+
 
