--- a/client/src/components/loader/loader.css
+++ b/client/src/components/loader/loader.css
@@ -3,18 +3,20 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 32%;
-    height: 20vh;
+    width: 25rem;
+    height: fit-content;
+    padding: 15px;
     border-radius: 5px;
     display: flex;
     align-content: center;
     justify-content: center;
     background-color:#ffff;
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    box-shadow: rgba(0, 0, 0, 0.27) 0px 0px 0.25em, rgba(26, 28, 30, 0.05) 0px 0.25em 1em;
 }
 
 .centeredContent>p{
     color:rgb(149, 131, 131);
+    margin: 5px 2px;
 }
 
 .centeredContent {
