--- a/client/src/Pages/Home/home.css
+++ b/client/src/Pages/Home/home.css
@@ -7,15 +7,18 @@
 }
 
 .homeTitle, .reviewTitle{
-    width: 1208px;
+    width: 95%;
     font-size: 25px;
     margin: 50px 0%;
+    max-width: 1208px;
+    
 }
 
 .banner22>img{
-    width: 90%;
+    width: 92%;
     margin: 20px 5%;
     padding-top: 30px;
+    max-width: 1208px;
 }
 
 .disable__overlay{
@@ -24,4 +27,5 @@
     pointer-events: none;
     filter: blur(2px);
 }
+
 
