--- a/client/src/components/LeadingHotel/LeadingHotels.css
+++ b/client/src/components/LeadingHotel/LeadingHotels.css
@@ -3,6 +3,7 @@
     width: 100%;
     margin: none;
     margin-top: 30px;
+    max-width: 1208px;
 
 }
 
@@ -14,7 +15,7 @@
 
 .leftConn{
     background-image: url("../../Assets/map2.png");
-    height: 70vh;
+    /* height: 70vh; */
 }
 
 .floatTitle1{
@@ -36,7 +37,7 @@
 .malaysia__con{
     float: right;
     position: relative;
-    top: 60%;
+    top: 260px;
     left: 117px;
 }
 
