--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    padding: 0 30px;
 }
 
 
@@ -81,7 +82,7 @@ height: 100px;
     position: absolute;
     bottom: 25px;
     border-radius: 2px;
-    width: 100%;
+    width: 93%;
     max-width: 1180px;
     border: 2px solid rgb(7, 233, 154);
 }
