--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,15 +1,18 @@
 .footerwrapper{
   width: 100%;
   margin: 0;
-  background-color: rgb(2, 18, 36);
   color: white;
-  max-width: 1208px;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(2, 18, 36);
 }
 
 .footerContainer{
     font-size: 17px;
+    background-color: rgb(2, 18, 36);
     width: 100%;
     margin: 0;
+    max-width: 1208px;
   }
   
   .footerLists{
