--- a/client/src/components/mailList/mailList.css
+++ b/client/src/components/mailList/mailList.css
@@ -1,3 +1,11 @@
+.mailWrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #003580;
+    
+}
+
 .mailContainer{
     width: 100%;
     background-color: #003580;
