--- a/client/src/Pages/List/list.css
+++ b/client/src/Pages/List/list.css
@@ -6,9 +6,10 @@
   
   .listWrapper {
     width: 100%;
-    max-width: 95%;
+    max-width: 1208px;
     display: flex;
     gap: 20px;
+    margin: 0 30px;
   }
   
   .listSearch {
@@ -47,6 +48,7 @@
     height: 30px;
     border: 1px solid black;
     padding: 5px;
+    padding-left: 8px;
     outline:none;
     border-radius: 6px;
   }
@@ -94,9 +96,9 @@
     border: none;
     width: 100%;
     height: 40px;
-    font-weight: 500;
+    font-weight: 600;
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: 2px;
     &:hover{
       background-color:rgb(12, 115, 219);
     }
@@ -105,3 +107,61 @@
   .listResult {
     flex: 3;
   }
+
+  .cityLists2{
+    width: 17.2rem;
+    max-width: 17.5rem;
+    margin: 0;
+    background-color: #ffffff;
+    max-height: 16rem;
+    position: absolute;
+    top: 27%;
+    /* left: 20px; */
+    margin: 0 5px;
+    z-index: 99999;
+    padding: 0;
+    padding: 0;
+    border: none;
+    border-radius: 5px;
+    overflow-y: scroll;
+    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.54);
+    -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.54);
+    -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.54);
+    border: none;
+}
+
+.cityLists2::-webkit-scrollbar {
+  display: none;
+}
+
+.cityLists2>li:hover{
+  background-color: #f3f1f1;
+}
+
+.cityLists2> li{
+  list-style: none;
+  padding:10px 10px;
+  margin: 0 5px;
+}
+
+.headerSearchInput2{
+  width: 17.2rem;
+  max-width: 17.5rem;
+  padding-left: 10px;
+  border: none;
+  outline: none;
+  color: rgb(82, 68, 68);
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.date2{
+  position: absolute;
+  top:45%;
+  right: 0px;
+  z-index: 9;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.54);
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.54);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.54);
+  border-radius: 6px
+}
