--- a/client/src/components/searchItem/searchItem.css
+++ b/client/src/components/searchItem/searchItem.css
@@ -7,10 +7,13 @@
     gap: 20px;
     margin-bottom: 20px;
     background-color: #fefefe;
+    &:hover{
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    }
   }
   
   .siImg {
-    width: 200px;
+    width: 230px;
     height: 200px;
     object-fit: cover;
   }
