--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -30,7 +30,7 @@ height: 100px;
     gap: 10px;
 }
 
-.headerListItem.active{
+.headerListItem.actives{
     border: 1px solid white;
     padding: 10px;
     border-radius:20px;
