--- a/client/src/Pages/Hotel/hotel.css
+++ b/client/src/Pages/Hotel/hotel.css
@@ -1,3 +1,17 @@
 .sliderConn23{
     height: 30vh;
 }
+
+.overlay-container {
+    position: relative;
+}
+
+.overlay32 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 999; 
+}
