--- a/client/src/components/searchItem/searchItem.css
+++ b/client/src/components/searchItem/searchItem.css
@@ -21,13 +21,14 @@
   .siDesc {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 8px;
     flex: 2;
   }
   
   .siTitle {
     font-size: 20px;
     color: #0071c2;
+    margin: 3px 0;
   }
   
   .siDistance {
@@ -44,8 +45,9 @@
   }
   
   .siSubtitle{
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
+    display: flex;
   }
   
   .siFeatures{
@@ -54,7 +56,7 @@
   
   .siCancelOp{
     font-size: 12px;
-    color: #008009;
+    color: #1d216e;
     font-weight: bold;
   }
   
@@ -62,7 +64,16 @@
     font-size: 12px;
     color: #008009;
   }
+
+  .siRating2 {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
   
+  .awayDist{
+   padding-left: 5px;
+  }
   .siDetails {
     flex: 1;
     display: flex;
