hotel page ui changes

--- a/client/src/components/hotelbodyComp/details.css
+++ b/client/src/components/hotelbodyComp/details.css
@@ -55,10 +55,12 @@
 .facility>ul>li{
     list-style: none;
     padding: 10px 10px;
-    font-size: 19px;
+    font-size: 17px;
     font-weight: 400;
-    width: 25%;
+    width: 28%;
     color: rgb(32, 31, 31);
+    display: flex;
+    align-items: center;
 }
 
 .facilityList{
@@ -66,7 +68,7 @@
     display: flex;
     flex-wrap: wrap;
     flex: 1;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     padding: 0;
 }
