--- a/client/src/components/hotelbodyComp/bookCard.css
+++ b/client/src/components/hotelbodyComp/bookCard.css
@@ -110,3 +110,18 @@
     position: relative;  
     top: 15px;
 }
+
+.options3{
+    position: relative;  
+    top: 15px;
+    overflow: hidden;
+    padding: 5px 5px;
+    background-color: #fff;
+    color: rgb(82, 68, 68);
+    font-weight: 600;
+    border-radius: 5px;
+    box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
+    -webkit-box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
+    -moz-box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
+    z-index: 10;
+  }
