--- a/client/src/components/bookingHistory/bookingHistory.css
+++ b/client/src/components/bookingHistory/bookingHistory.css
@@ -40,7 +40,21 @@
     margin: 0;
 }
 
+.final_stat2>h4, .final_stat2>p{
+    margin: 0;
+}
+
 .details_of_hotel>p, .final_stat>p{
     padding: 1px 0;
+}
+
+.nonr{
+    display: none;
+}
+
+.final_stat2{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
