--- a/client/src/components/bookingHistory/bookingHistory.css
+++ b/client/src/components/bookingHistory/bookingHistory.css
@@ -66,7 +66,7 @@
     height: 45vh;
     width: 500px;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #fbfafa;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
