cancel hotel booking feature done both for ui and server

--- a/client/src/components/bookingHistory/bookingHistory.css
+++ b/client/src/components/bookingHistory/bookingHistory.css
@@ -143,4 +143,10 @@
     background-color: #443c3caf;
 }
 
+.booking__id{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
