--- a/client/src/components/rightContainer/rightContainer.css
+++ b/client/src/components/rightContainer/rightContainer.css
@@ -7,6 +7,7 @@
 .right__parent__container{
     display: flex;
     /* width: 50%; */
+    max-width: 50%;
     position: fixed;
     z-index: 999999;
     right: 0;
