--- a/client/src/Pages/List/list.css
+++ b/client/src/Pages/List/list.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+
 .listContainer {
     display: flex;
     justify-content: center;
@@ -152,7 +154,7 @@
 }
 
 .headerSearchInput2{
-  width: 17.2rem;
+  /* width: 17.2rem; */
   max-width: 17.5rem;
   padding-left: 10px;
   border: none;
@@ -235,6 +237,26 @@
   -webkit-box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
   -moz-box-shadow: 2px 6px 16px -7px rgba(0,0,0,0.62);
   z-index: 10;
+}
+
+.property_notFound{
+  margin: 0 auto 0 auto;
+  border-radius: 5px;
+}
+
+.image_hotelNotFound{
+  width: 60%;
+  padding: 0 20% 0 20%;
+}
+
+.property_notFound>p{
+  font-size: 30px;
+  width: 80%;
+  color: #7d7676;
+  margin: 0 10% 0 10%;
+  text-align: center;
+  font-weight: 500;
+  font-family: "Exo 2", sans-serif;
 }
 
 
